*** When upgrading, don't forget to: "cd bin ; ./install.pl" ***
*** Also, it is _highly_ advisable to backup your data before upgrading ***

Version 1.9.3

* The project list screen now displays for each project, the total
  number of open topics, and the total number of topics.  Clicking on
  the count will go to the topic list screen with the relevant topics
  displayed.

Version 1.9.2

* Codestriker now works with UTF-8 text, to support unicode character
  input for topic titles, descriptions, comment text, and project
  names and descriptions.  This required making Perl 5.8 as a
  pre-requisite, as Perl 5.6 doesn't cut the mustard for unicode
  processing.

* Created a new optional configuration parameter $repository_name_map
  in codestriker.conf.  This allows for a user-defined repository name
  to be displayed in the codestriker UI, rather than the full
  repository URL.  This can be useful for hiding potentially sensitive
  username/password information that might be a part of the repository
  URL.  See the codestriker.conf file for more information.
  Submitted by Edwin Fine <edwin.m.fine@verizon.com>.

* New repository module for linking to ClearCase dynamic views.  See
  the configuration file and/or manual for example configurations.
  Submitted by Avinandan Sengupta <avinandan.sengupta@gmail.com>.

* Modified the way Perforce retrieves files from the depot, as servers
  set with a security level of 2 or above were not receiving password
  information.  This has been addressed by modifying the command line
  to explictly pass in the password rather than the client workspace
  name, which is ignored for these security levels.  The repository
  configuration for Perforce has also been changed to use the password
  in place of the client workspace name.  Perforce users should update
  their configuration files appropriately.  Submitted by 
  J Dickon Glanville <jdglanville@users.sourceforge.net>.
