@@ -162,9 +162,10 @@ sub getDiff ($$$$$) {
     # the command below.
 
     my $ssdir = $self->{ssdir};
+    my $varg = ($tag =~ /^\d+$/) ? "-V$tag" : "\"-VL$tag\"";
     my $cmd = "\"$vss\" dir \"$module_name\"" .
 	" -y" . $self->{username} . "," . $self->{password} .
-	" -R \"-VL${tag}\" -I-Y";
+	" -R $varg -I-Y";
     $self->_write_vss_command($cmd, $tmp_batch_file);
 
     open(VSS, "\"$tmp_batch_file\" |")
@@ -221,9 +222,13 @@ sub getDiff ($$$$$) {
 
 	my $command_output = "$tempdir\\___output.txt";
 	if ($start_tag ne '' && $end_tag ne '') {
+	    my $varg = "\"";
+            $varg .= ($start_tag =~ /^\d+$/) ? "-V${start_tag}~" : "-VL${start_tag}~";
+            $varg .= ($end_tag =~ /^\d+$/) ? $end_tag : "L${end_tag}";
+            $varg .= "\"";
 	    $cmd = "\"$vss\" diff \"$files[$i]\"" .
 		   " -y" . $self->{username} . "," . $self->{password} .
-		   " -I-Y -DU3000X5 \"-VL${start_tag}~L${end_tag}\"" .
+		   " -I-Y -DU3000X5 $varg" .
 		   " -O\"$command_output\"";
 	    $self->_write_vss_command($cmd, $tmp_batch_file);
 	    system("\"$tmp_batch_file\"");
@@ -237,9 +242,10 @@ sub getDiff ($$$$$) {
 	    # Retrieve a read-only copy of the file into a temporary
 	    # directory.  Make sure the command output is put into
 	    # a temporary file, rather than stdout/stderr.
+	    my $varg = ($tag =~ /^\d+$/) ? "-V$tag" : "\"-VL$tag\"";
 	    $cmd = "\"$vss\" get \"$files[$i]\"" .
 		   " -y" . $self->{username} . "," . $self->{password} .
-		   " \"-VL${tag}\" -I-Y -O\"$command_output\" -GWR -GL\"$tempdir\"";
+		   " $varg -I-Y -O\"$command_output\" -GWR -GL\"$tempdir\"";
 	    $self->_write_vss_command($cmd, $tmp_batch_file);
 	    system("\"$tmp_batch_file\"");
 
